// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkPill renders a NetworkPill with border 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "#209853",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 999999,
          "borderWidth": 0,
          "display": "flex",
          "marginRight": 8,
        },
        Object {
          "borderColor": "#209853",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Array [
          Object {
            "resizeMode": "contain",
          },
          Object {
            "borderRadius": 8,
            "height": 16,
            "width": 16,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 8,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0D111C",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders a NetworkPill without image 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 999999,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 12,
        "paddingVertical": 8,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "borderRadius": 999999,
          "borderWidth": 0,
          "display": "flex",
          "marginRight": 8,
        },
        Object {
          "borderColor": "#209853",
        },
      ]
    }
  >
    <Image
      source={
        Object {
          "process": [Function],
        }
      }
      style={
        Array [
          Object {
            "resizeMode": "contain",
          },
          Object {
            "borderRadius": 8,
            "height": 16,
            "width": 16,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "display": "flex",
          "flexGrow": 0,
          "flexShrink": 0,
          "width": 8,
        },
      ]
    }
  />
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.4}
    style={
      Array [
        Object {
          "color": "#0D111C",
          "display": "flex",
          "fontFamily": "Inter-Regular",
          "fontSize": 15,
          "lineHeight": 20,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;

exports[`NetworkPill renders an InlineNetworkPill 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderColor": "transparent",
        "borderRadius": 4,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "paddingHorizontal": 4,
        "paddingVertical": 2,
      },
      Object {
        "backgroundColor": "#2098531a",
        "borderColor": "transparent",
      },
    ]
  }
>
  <Text
    allowFontScaling={true}
    maxFontSizeMultiplier={1.2}
    style={
      Array [
        Object {
          "color": "#0D111C",
          "display": "flex",
          "fontFamily": "Inter-SemiBold",
          "fontSize": 12,
          "lineHeight": 17,
        },
        Object {
          "color": "#209853",
        },
      ]
    }
  >
    Görli
  </Text>
</View>
`;
